Added static version of index2 as index, renamed the old one to -old, and added two new pictures and embedded video to media.

--- a/media.html
+++ b/media.html
@@ -14,11 +14,36 @@
 		<div id="left-img"></div>
 		<div id="content">
 			<h1>MEDIA</h1>
-			<h2>Pictures</h2>
-			<p><img src="images/Screenshot-Frogatto-61.png" width=50% height=50%/><img src="images/Screenshot-Frogatto-60.png" width=50% height=50%/><img src="images/Screenshot-Frogatto-56.png" width=50% height=50%/><img src="images/Screenshot-Frogatto-48.png" width=50% height=50%/><img src="images/Screenshot-Frogatto-39.png" width=50% height=50%/></p>
-			<p id="proper">Not all the pictures are from current version. Newer pictures are near the top.</p>
 			<h2>Videos</h2>
-			<p>Youtube: <a href="http://youtu.be/AEHyRQnQVNQ">0.2.0</a> · <a href="http://www.youtube.com/watch?v=H7OMc4HwYS8">0.1.0</a></p>
+			<p>Newest videos first. View on youtube for larger HD version.</p>
+			<iframe width="400" height="255" src="http://www.youtube.com/embed/videoseries?list=PL5845FD4D684EB568&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+			<p>Also of interest: <a href="https://vimeo.com/48185072">Live Image Reloading with Cube Trains</a></p>
+			<h2>Pictures</h2>
+			<p>Newer pictures near the top. Click to enlarge. Not all the pictures are from current version.</p>
+			<p>
+				<div style="float:left; width:50%">
+					<a href="images/snapshot12.png"><img src="images/snapshot12.png" width=100%/></a>
+					<br>Testing new graphics.</div>
+				<div style="float:left; width:50%">
+					<a href="images/snapshot11.png"><img src="images/snapshot11.png" width=100%/></a>
+					<br>New UI graphics.</div>
+				<div style="float:left; width:50%">
+					<a href="images/Screenshot-Frogatto-61.png"><img src="images/Screenshot-Frogatto-61.png" width=100%/></a>
+					<br>Tutorial #1, again.</div>
+				<div style="float:left; width:50%">
+				<a href="images/Screenshot-Frogatto-60.png"><img src="images/Screenshot-Frogatto-60.png" width=100%/></a>
+					<br>The main map.</div>
+				<div style="float:left; width:50%">
+				<a href="images/Screenshot-Frogatto-56.png"><img src="images/Screenshot-Frogatto-56.png" width=100%/></a>
+					<br>The effect of depth.</div>
+				<div style="float:left; width:50%">
+				<a href="images/Screenshot-Frogatto-48.png"><img src="images/Screenshot-Frogatto-48.png" width=100%/></a>
+					<br>Good transparency is needed.</div>
+				<div style="float:left; width:50%">
+				<a href="images/Screenshot-Frogatto-39.png"><img src="images/Screenshot-Frogatto-39.png" width=100%/></a>
+					<br>Tutorial #1</div>
+			</p>
+			<!--<p id="proper">Not all the pictures are from current version.</p>-->
 		</div>
 		<div id="right-img" style="overflow: hidden;"></div>
 	</body>
