--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<!--<script src="index reflow.js"></script> This is a little too buggy to use atm.-->
 	</head>
-	<body onLoad="mixpanel.track('index2 load');" onScroll="reflow_titles();" onResize="reflow_titles();">
+	<body onLoad="mixpanel.track('index load');" onScroll="reflow_titles();" onResize="reflow_titles();">
 		<!-- For some reason, reflow_titles is fired twice each time the window size changes. -->
 		<script type="text/javascript"> //start Mixpanel
 			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
