Added link to linux compling guide from the linux download page.

--- a/download linux.html
+++ b/download linux.html
@@ -23,6 +23,6 @@
 		<a id="ebuild-download" class="shinyButtonTiny" href = "files/release/linux/cubetrains-0.2.1.ebuild">cubetrains-0.2.1.ebuild</a>
 		<h2>Source Code</h2>
 		<a id="source-download" class="shinyButtonTiny" href="https://github.com/DDR0/Cube_Trains/zipball/0.2.1">Cube Trains 0.2.1.zip</a>
-		
+		<br><p>To compile the source code, follow the <a href="linux compiling guide.html">compiling guide</a>.</p>
 	</body>
 </html>
