--- a/Oil Drop/index-mode5.html
+++ b/Oil Drop/index-mode5.html
@@ -41,7 +41,7 @@
 			<br>Controls: Mouse
 		</p>
 		<div id="music">
-			<iframe width="105" height="79" src="http://www.youtube.com/embed/OIW4F285QjA&autoplay=1" frameborder="0"></iframe>
+			<iframe width="105" height="79" src="http://www.youtube.com/embed/OIW4F285QjA" frameborder="0"></iframe>
 		</div>
 	</body>
 </html>
