Fixed firefox score; made youtube video autoplay.

--- a/Oil Drop/index.html
+++ b/Oil Drop/index.html
@@ -35,7 +35,8 @@
 			<br>Controls: Mouse
 		</p>
 		<div id="music">
-			<iframe width="105" height="79" src="http://www.youtube.com/embed/OIW4F285QjA" frameborder="0"></iframe>
+			<!-- <iframe width="105" height="79" src="http://www.youtube.com/embed/OIW4F285QjA" frameborder="0"></iframe> -->
+			<object width="105" height="79"><param name="movie" value="http://www.youtube.com/v/OIW4F285QjA&#038;autoplay=1&#038;loop=1"></param><param name="wmode" value="transparent"></param><embed src="http://www.youtube.com/v/OIW4F285QjA&#038;autoplay=1&#038;loop=1" type="application/x-shockwave-flash" wmode="transparent" width="105" height="79"></embed></object></p>
 		</div>
 	</body>
 </html>
