Added HN news item link.

--- a/discussions/Beyond Practise.html
+++ b/discussions/Beyond Practise.html
@@ -124,6 +124,6 @@
 			<div class="name">&lt;Jetrel&gt;</div> <p class="dialog">Because it's the easy cop-out no one can reasonably fault them for doing.</p>
 			<div class="name">&lt;vultraz&gt;</div> <p class="dialog">Tests are meant to find out how much you know, but instead, they've become this thing where you have to pass or you lose.</p>
 		</div>
-		<p>Discuss on <a href="http://news.ycombinator.com/news">Hacker News</a>.</p>
+		<p>Discuss on <a href="http://news.ycombinator.com/item?id=5240701">Hacker News</a>.</p>
 	</body>
 </html>
