--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/Grey and Blue.css">
 	</head>
 	<body>
+		<div id="badge"><img src="images/icons/page.svg" alt=""></div> <!--This is the background icon to display.-->
 		<div id="icon-bar">
 			<a                    ><img src="images/icons/page.svg"  alt=""><div>blog</div   ></a>
 			<a href="gallery.html"><img src="images/icons/work.svg"  alt=""><div>gallery</div></a>
@@ -14,7 +15,6 @@
 		</div>
 		<div id="content-holder">
 			<h1><img src="images/text-blog.png" alt="blog" height=55></h1>
-			<!-- <h1>blog</h1> -->
 			<div id="content-pane">
 				<h2>Blog Post #2</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
