Moved Frogatto's Stats utility into its own folder.

--- a/Frogatto's Stats/error codes.html
+++ b/Frogatto's Stats/error codes.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Frogatto Standard Stats Visulizer Error Codes</title>
-		<link rel="stylesheet" type="text/css" href="css/stats black.css">
+		<title>Frogatto's Standard Stats Visulizer Error Codes</title>
+		<link rel="stylesheet" type="text/css" href="black.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 	<body>
@@ -13,5 +13,6 @@
 		<p>Symptoms: Black background, white 'processing' text.</p>
 		<p>Cause: Level not loading. This is most probably because it doesn't exist on the stats server, but may also be because you've lost your internet connection.</p>
 		<hr>
+		<p><a href="level selector.html">Select a different level to render.</a></p>
 	</body>
 </html>
