--- a/Frogatto's Stats/scatter.html
+++ b/Frogatto's Stats/scatter.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Frogatto Standard Stats Visulizer</title>
-		<link rel="stylesheet" type="text/css" href="css/stats black.css">
+		<title>Frogatto's Standard Stats Visulizer</title>
+		<link rel="stylesheet" type="text/css" href="black.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 <!-- 		<script src="http://www.theargentlark.com/dark-chess/jquery.json.js"></script> -->
-		<script src="frogatto's stats.js"></script>
+		<script src="scatter.js"></script>
 		<script type="text/javascript">$(document).ready(function() {setup()})</script>
 	</head>
 	<body style="background-color: black;">
@@ -18,7 +18,7 @@
 							<button tabindex="2" accesskey="g" type="button" onmouseup="newGraph()" onkeypress="onEnterGraph(event)">Graph</button><br><div style="opacity:0; font-size:75%">!</div>
 						</td>
 						<td>
-							<input tabindex=1 type="text" id="filename" value="titlescreen" onkeypress="onEnterGraph(event)" required>.cfg<br><div style="font-size:75%;"><a href="frogatto's stats level selector.html">level list</a> • <a href="frogatto's stats error codes.html">error codes</a> • <a href="http://www.frogatto.com" target="_blank">frogatto.com</a></div>
+							<input tabindex=1 type="text" id="filename" value="titlescreen" onkeypress="onEnterGraph(event)" required>.cfg<br><div style="font-size:75%;"><a href="level selector.html">level list</a> • <a href="error codes.html">error codes</a> • <a href="http://www.frogatto.com" target="_blank">frogatto.com</a></div>
 						<td>
 					</tr>
 					<tr>
