Used compile-to-resource languages for the blog-in-progress, in anticipation of working out a slightly more dynamic solution.

--- a/blog.html
+++ b/blog.html
@@ -1,31 +1,28 @@
-<!DOCTYPE HTML>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Status</title>
-		<link rel="stylesheet" href="css/Grey and Blue.css">
-	</head>
-	<body>
-		<div id="badge"><img src="images/icons/page.svg" alt=""></div> <!--This is the background icon to display.-->
-		<div id="icon-bar">
-			<a                    ><img src="images/icons/page.svg"  alt=""><div>blog</div   ></a>
-			<a href="gallery.html"><img src="images/icons/work.svg"  alt=""><div>gallery</div></a>
-			<a href="contact.html"><img src="images/icons/chat2.svg" alt=""><div>contact</div></a>
-			<a href="feeds.html"  ><img src="images/icons/rss.svg"   alt=""><div>rss</div    ></a>
-		</div>
-		<div id="content-holder">
-			<h1><img src="images/text-blog.png" alt="blog" height=55></h1>
-			<div id="content-pane">
-				<h2>Blog Post #2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<p>PART 2: Again! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				
-				<h2>Blog Post #1</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-		</div>
-	</body>
-	<footer>
-		This site ©2013 David Roberts.
-	</footer>
+<!DOCTYPE html>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8'>
+    <title>Status</title>
+    <link href='css/Grey and Blue.css' rel='stylesheet'>
+  </head>
+  <body>
+    <div id='badge'><img alt='' src='images/icons/page.svg'></div>
+    <div id='icon-bar'>
+      <a><img alt='' src='images/icons/page.svg'><div>blog</div></a>
+      <a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
+      <a href='contact.html'><img alt='' src='images/icons/chat2.svg'><div>contact</div></a>
+      <a href='feeds.html'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
+    </div>
+    <div id='content-holder'>
+      <h1><img alt='blog' src='images/text-blog.png'></h1>
+      <div id='content-pane'>
+        <h2>Blog Post #2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>PART 2: Again! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2>Blog Post #1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+  </body>
+  <footer>This site ©2013 David Roberts.</footer>
 </html>
