Fixed a few typos in the Grey & Blue style, tweaked the background to work with tomorrow's city-sim, and added a script/canvas in the gallery footer for it as well.

--- a/gallery.html
+++ b/gallery.html
@@ -18,5 +18,9 @@
       <div id='content-pane'>❹❍❹: Gallery Not Found.</div>
     </div>
   </body>
-  <footer>This site ©2013 David Roberts.</footer>
+  <footer>
+    This site ©2013 David Roberts.
+    <canvas height='0' id='background-city' width='0'></canvas>
+    <script src='scripts/background city.js'></script>
+  </footer>
 </html>
