Added roads to easter egg.

--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,8 @@
   <footer>
     This site ©2013 David Roberts.
     <canvas height='0' id='background-city' width='0'></canvas>
-    <script src='scripts/background city.js'></script>
+    <script src='http://code.jquery.com/jquery-2.0.0.min.js'></script>
+    <script src='http://code.createjs.com/preloadjs-0.3.0.min.js'></script>
+    <script src='background town/setup.js'></script>
   </footer>
 </html>
