Added a pull-tab to let you find the bonus content.

--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,9 @@
   </body>
   <footer>
     This site ©2013 David Roberts.
+    <a href='#' onclick='window.city.toggleVisibility()' src='images/easter-egg pull.svg' style='float: right; margin-right: 20%;'>
+      <img src='images/easter-egg pull.svg'>
+    </a>
     <canvas height='0' id='background-city' width='0'></canvas>
     <script src='http://code.jquery.com/jquery-2.0.0.min.js'></script>
     <script src='http://code.createjs.com/preloadjs-0.3.0.min.js'></script>
