Made it so that the easter-egg city slowly expands by itself, and so that you can drag out roads and expand it yourself.

--- a/gallery.html
+++ b/gallery.html
@@ -14,8 +14,8 @@
       <a href='feeds.html'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
-      <h1><img alt='blog' src='images/text-blog.png'></h1>
-      <div id='content-pane'>❹❍❹: Gallery Not Found.</div>
+      <h1><img alt='gallery' src='images/text-gallery.png'></h1>
+      <div id='content-pane'>TODO: Content.</div>
     </div>
   </body>
   <footer>
