Added a blog post, and cleaned up some of the CSS. Got rid of the shitty glow effect on the large-size right nav buttons. Haven't fixed the transition to small nav buttons yet, though.

--- a/contact.html
+++ b/contact.html
@@ -18,5 +18,5 @@
       <div id='content-pane'>You can reach me at robertsdavidddr@gmail.com, on Github as DDR0, or on IRC as DDR on freenode.net.</div>
     </div>
   </body>
-  <footer>This site ©2013 David Roberts.</footer>
+  <footer>Site ©2013 David Roberts.</footer>
 </html>
