--- a/feeds.html
+++ b/feeds.html
@@ -18,5 +18,5 @@
       <div id='content-pane'>No RSS yet.</div>
     </div>
   </body>
-  <footer>This site ©2013 David Roberts.</footer>
+  <footer>Site ©2013 David Roberts.</footer>
 </html>
