--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
     </div>
   </body>
   <footer>
-    This site ©2013 David Roberts.
+    Site ©2013 David Roberts.
     <a href='#' onclick='window.city.toggleVisibility()' src='images/easter-egg pull.svg' style='float: right; margin-right: 20%;'>
       <img src='images/easter-egg pull.svg'>
     </a>
