Added the beginnings of a gallery.

--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <title>Status</title>
     <link href='css/Grey and Blue.css' rel='stylesheet'>
+    <link href='css/Gallery.css' rel='stylesheet'>
   </head>
   <body>
     <div id='badge'><img alt='' src='images/icons/page.svg'></div>
@@ -15,7 +16,16 @@
     </div>
     <div id='content-holder'>
       <h1><img alt='gallery' src='images/text-gallery.png'></h1>
-      <div id='content-pane'>TODO: Content.</div>
+      <div id='content-pane'><!-- Oh, wouldn't it be nice to be able to define a height variable here… but can't do that. -->
+      <div style='min-height:300px;'>
+        <a href="http://www.frogatto.com/"><img src="images/gallery/frogatto forest-crossroads.png", width=400, height=300, align="right"></a>
+        <h2>Frogatto &&nbsp;Friends</h2>
+        <p>Frogatto and friends is a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="http://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="http://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.</p>
+      </div>
+      <hr>
+      <p style='min-height:300px;'>
+        <img src="images/gallery/frogatto forest-crossroads.png", width=400, height=300, align="left">This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side.
+      </p></div>
     </div>
   </body>
   <footer>
