--- a/gallery.html
+++ b/gallery.html
@@ -9,33 +9,31 @@
   <body>
     <div id='badge'><img alt='' src='images/icons/page.svg'></div>
     <div id='icon-bar'>
-      <a href='blog.html'><img alt='' src='images/icons/page.svg'><div>blog</div></a>
-      <a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
-      <a href='contact.html'><img alt='' src='images/icons/chat2.svg'><div>contact</div></a>
-      <a href='feeds.html'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
+      <a href='blog.html'><img alt='Blog' src='images/icons/page.svg'><div>blog</div></a>
+      <a href='gallery.html'><img alt='Gallery' src='images/icons/work.svg'><div>gallery</div></a>
+      <a href='contact.html'><img alt='Contact' src='images/icons/chat2.svg'><div>contact</div></a>
+      <a href='feeds.html'><img alt='RSS' src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='gallery' src='images/text-gallery.png'></h1>
       <div id='content-pane'><!-- Oh, wouldn't it be nice to be able to define a height variable here… but can't do that. -->
       <div style='min-height:300px;'>
-        <a href="http://www.frogatto.com/"><img src="images/gallery/frogatto forest-crossroads.png", width=400, height=300, align="right"></a>
+        <a href="http://www.frogatto.com/"><img src="images/gallery/frogatto forest-crossroads.png" width=400 height=300></a>
+        <!-- %section{"style"=>"float:left;"} -->
         <h2>Frogatto &&nbsp;Friends</h2>
         <p>Frogatto and friends is a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="http://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="http://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.</p>
       </div>
-      <hr>
-      <p style='min-height:300px;'>
-        <img src="images/gallery/frogatto forest-crossroads.png", width=400, height=300, align="left">This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side.
-      </p></div>
+      <hr></div>
     </div>
+    <footer>
+      Site ©2013 David Roberts.
+      <a href='#' onclick='window.city.toggleVisibility()' style='float: right; margin-right: 20%;'>
+        <img src='images/easter-egg pull.svg'>
+      </a>
+      <canvas height='0' id='background-city' width='0'></canvas>
+      <script src='http://code.jquery.com/jquery-2.0.0.min.js'></script>
+      <script src='http://code.createjs.com/preloadjs-0.3.0.min.js'></script>
+      <script src='background town/setup.js'></script>
+    </footer>
   </body>
-  <footer>
-    Site ©2013 David Roberts.
-    <a href='#' onclick='window.city.toggleVisibility()' src='images/easter-egg pull.svg' style='float: right; margin-right: 20%;'>
-      <img src='images/easter-egg pull.svg'>
-    </a>
-    <canvas height='0' id='background-city' width='0'></canvas>
-    <script src='http://code.jquery.com/jquery-2.0.0.min.js'></script>
-    <script src='http://code.createjs.com/preloadjs-0.3.0.min.js'></script>
-    <script src='background town/setup.js'></script>
-  </footer>
 </html>
