Made all four main pages use their correct images. Removed empty alt text attributes.

--- a/gallery.html
+++ b/gallery.html
@@ -7,12 +7,12 @@
     <link href='css/Gallery.css' rel='stylesheet'>
   </head>
   <body>
-    <div id='badge'><img alt='' src='images/icons/page.svg'></div>
+    <div id='badge'><img src='images/icons/work.svg'></div>
     <div id='icon-bar'>
-      <a href='blog.html'><img alt='Blog' src='images/icons/page.svg'><div>blog</div></a>
-      <a href='gallery.html'><img alt='Gallery' src='images/icons/work.svg'><div>gallery</div></a>
-      <a href='contact.html'><img alt='Contact' src='images/icons/chat2.svg'><div>contact</div></a>
-      <a href='feeds.html'><img alt='RSS' src='images/icons/rss.svg'><div>rss</div></a>
+      <a href='blog.html'><img src='images/icons/page.svg'><div>blog</div></a>
+      <a><img src='images/icons/work.svg'><div>gallery</div></a>
+      <a href='contact.html'><img src='images/icons/chat2.svg'><div>contact</div></a>
+      <a href='feeds.html'><img src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='gallery' src='images/text-gallery.png'></h1>
