--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href='css/Blog.css' rel='stylesheet'>
   </head>
   <body>
-    <div id='badge'><img alt='' src='images/icons/page.svg'></div>
+    <div id='badge'><img src='images/icons/page.svg'></div>
     <div id='icon-bar'>
-      <a><img alt='' src='images/icons/page.svg'><div>blog</div></a>
-      <a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
-      <a href='contact.html'><img alt='' src='images/icons/chat2.svg'><div>contact</div></a>
-      <a href='feeds.html'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
+      <a><img src='images/icons/page.svg'><div>blog</div></a>
+      <a href='gallery.html'><img src='images/icons/work.svg'><div>gallery</div></a>
+      <a href='contact.html'><img src='images/icons/chat2.svg'><div>contact</div></a>
+      <a href='feeds.html'><img src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='blog' src='images/text-blog.png'></h1>
