Added 'skip to content' links for the visually impaired, at the expense of those using text-based browsers. Came to my senses and made every nav link link to a page, even if we're already on that page. A #top link might work here as well... but I feel this is more consistent.

--- a/gallery.html
+++ b/gallery.html
@@ -7,15 +7,17 @@
     <link href='css/Gallery.css' rel='stylesheet'>
   </head>
   <body>
+    <a href='#content' id='skip-nav'>Skip navigation.</a>
     <div id='badge'><img src='images/icons/work.svg'></div>
     <div id='icon-bar'>
       <a href='blog.html'><img src='images/icons/page.svg'><div>blog</div></a>
-      <a><img src='images/icons/work.svg'><div>gallery</div></a>
+      <a href='gallery.html'><img src='images/icons/work.svg'><div>gallery</div></a>
       <a href='contact.html'><img src='images/icons/chat2.svg'><div>contact</div></a>
       <a href='feeds.html'><img src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='gallery' src='images/text-gallery.png'></h1>
+      <a name='content'></a>
       <div id='content-pane'>
         <!-- Oh, wouldn't it be nice to be able to define a height variable here… but can't do that. -->
         <div style='min-height:300px;'>
