--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,17 @@
     <link href='css/Grey and Blue.css' rel='stylesheet'>
   </head>
   <body>
+    <a href='#content' id='skip-nav'>Skip navigation.</a>
     <div id='badge'><img src='images/icons/chat2.svg'></div>
     <div id='icon-bar'>
       <a href='blog.html'><img src='images/icons/page.svg'><div>blog</div></a>
       <a href='gallery.html'><img src='images/icons/work.svg'><div>gallery</div></a>
-      <a><img src='images/icons/chat2.svg'><div>contact</div></a>
+      <a href='contact.html'><img src='images/icons/chat2.svg'><div>contact</div></a>
       <a href='feeds.html'><img src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='contact' src='images/text-contact.png'></h1>
+      <a name='content'></a>
       <div id='content-pane'>You can reach me at robertsdavidddr@gmail.com, on Github as DDR0, or on IRC as DDR on freenode.net.</div>
     </div>
   </body>
