--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link href='css/Blog.css' rel='stylesheet'>
   </head>
   <body>
+    <a href='#content' id='skip-nav'>Skip navigation.</a>
     <div id='badge'><img src='images/icons/page.svg'></div>
     <div id='icon-bar'>
-      <a><img src='images/icons/page.svg'><div>blog</div></a>
+      <a href='blog.html'><img src='images/icons/page.svg'><div>blog</div></a>
       <a href='gallery.html'><img src='images/icons/work.svg'><div>gallery</div></a>
       <a href='contact.html'><img src='images/icons/chat2.svg'><div>contact</div></a>
       <a href='feeds.html'><img src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='blog' src='images/text-blog.png'></h1>
+      <a name='content'></a>
       <div id='content-pane'>
         <h2>Diagrams and Charts of Game Mechanics</h2>
         <p>
