Corrected window title.

--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8'>
-    <title>Status</title>
+    <title>Gallery</title>
     <link href='css/Grey and Blue.css' rel='stylesheet'>
     <link href='css/Gallery.css' rel='stylesheet'>
   </head>
