--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8'>
-    <title>Status</title>
+    <title>Contact</title>
     <link href='css/Grey and Blue.css' rel='stylesheet'>
   </head>
   <body>
