--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8'>
-    <title>Status</title>
+    <title>Blog</title>
     <link href='css/Grey and Blue.css' rel='stylesheet'>
     <link href='css/Blog.css' rel='stylesheet'>
   </head>
