--- a/gallery.html
+++ b/gallery.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <a href='#content' id='skip-nav'>Skip navigation.</a>
-    <div id='badge'><img src='images/icons/work.svg'></div>
+    <div id='badge'><img alt='' src='images/icons/work.svg'></div>
     <div id='icon-bar'>
-      <a href='blog.html'><img src='images/icons/page.svg'><div>blog</div></a>
-      <a href='gallery.html'><img src='images/icons/work.svg'><div>gallery</div></a>
-      <a href='contact.html'><img src='images/icons/chat2.svg'><div>contact</div></a>
-      <a href='feeds.html'><img src='images/icons/rss.svg'><div>rss</div></a>
+      <a href='blog.html'><img alt='' src='images/icons/page.svg'><div>blog</div></a>
+      <a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
+      <a href='contact.html'><img alt='' src='images/icons/chat2.svg'><div>contact</div></a>
+      <a href='feeds.html'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='gallery' src='images/text-gallery.png'></h1>
