--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,7 @@
       <h1><img alt='gallery' src='images/text-gallery.png'></h1>
       <a name='content'></a>
       <div id='content-pane'>
+        <!-- // FROGATTO /// -->
         <!-- Oh, wouldn't it be nice to be able to define a height variable here… but can't do that. -->
         <div style='min-height:300px;'>
           <a href="http://www.frogatto.com/"><img class="cover right" src="images/gallery/frogatto forest-crossroads (small).png"></a>
@@ -26,6 +27,7 @@
           <p>This a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="http://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="http://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.</p>
         </div>
         <hr>
+        <!-- // CANDY CRUNCH /// -->
         <script src='http://code.jquery.com/jquery-2.0.0.min.js'></script>
         <div style='min-height:322px;'>
           <!-- Measured width/height is 641, 643. Half that is 320, 321. We have two margins, so half that is 160/161. Margin right is +2ex. -->
@@ -34,8 +36,16 @@
           <p>Over the course of two weeks in the spring of 2013, I was commissioned by a company called <a href="http://ayogo.com">Ayogo</a> to program a match-3 game. Candy Crunch was the outcome. Match more than three candies together to score a bonus. There is also a <a href="Candy Crunch/index.html">double-sized version</a>. You can <button onclick="$('#candy-crush')[0].contentWindow.location.reload()">restart</button> the game.</p>
         </div>
         <hr>
+        <!-- // CUBE TRAINS /// -->
         <div style='min-height:300px;'>
-          <iFrame class='cover right' height='300' id='editabled' onclick="$('#editabled')[0].focus()" src='https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html' width='400'></iFrame>
+          <a href="http://cubetrains.com/index.html#Downloads"><img class="cover right" src="images/gallery/cube trains.jpeg"></a>
+          <h2>Cube Trains</h2>
+          <p>A 3D puzzle game with a train theme, which I made over the course of 2011. It features roughly a dozen puzzles of varying difficulty, and has an expansion pack which grants 11 more. While I considered it rather nice, it was a commercial failure. Comes with editor & player. Code on <a href="https://github.com/DDR0/Cube_Trains">github</a>. Free of digital rights management software.</p>
+        </div>
+        <hr>
+        <!-- // EDITABLED /// -->
+        <div style='min-height:300px;'>
+          <iFrame class='cover left' height='300' id='editabled' onclick="$('#editabled')[0].focus()" src='https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html' width='400'></iFrame>
           <h2>Editabled Pre-Alpha</h2>
           <p>An editable pixel editor. Eventually. You can draw sharp lines on it with your mouse and non-destructively move around with the arrow keys. (Hold alt and click on the example to grant it keyboard focus.) Infinite scroll in any direction. Features a custom multi-threaded compositing engine. You can <button onclick="var e = $('#editabled')[0]; e.src = e.src; //Basically, we're not allowed to reload the window content here because it's not of this domain. Perhaps we should, uh, make it so. Considering this is what it was meant for.">clear</button> the canvas if you've messed up, since there is no ereaser yet. There is a <a href="https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html">full-screen version</a>.</p>
         </div>
