Made the footer to the gallery a little more personal.

--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,9 @@
           <h2>Open Pixel Platformer</h2>
           <p>This project aims to make a free, open-source platformer for coders and artists to use as a resource. I lead the programming side of the project. Code on <a href="https://github.com/DDR0/open_pixel_platformer">Github</a>. Discussion is at a <a href="http://www.pixeljoint.com/forum/forum_topics.asp?FID=23">sub-forum on PixelJoint</a>.</p>
         </div>
+        <hr>
+        <p>Questions? Comments? I like <a href="contact.html">hearing</a> from people.</p>
+        <p>– David Roberts</p>
       </div>
     </div>
     <footer>
