Revamped the blog post compiler to use names instead of numbers, and added some createjs article examples for the future createjs example article.

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
           Computer games are, in broad terms, systems of exchange. The player can exchange gold coins for a fancy sword; time and attention for progress; or the player can sit back and watch the game exchange stuff with itself. By graphing interactions between the player and bits of the game, we can see what the focus of the play of the game will be. Lets start off by looking at the simplest example there is, <a href="http://progressquest.com/">Progress Quest</a><a class="lp" href="http://www.youtube.com/watch?v=0W2DyOWPbAA"></a>.
         </p>
         <figure>
-          <img alt='One relationship, here: time positively influences progress through the game.' src='Blog Posts/02/Progress Quest.svg'>
+          <img alt='One relationship, here: time positively influences progress through the game.' src='Blog Posts/02.Flowcharts of Game Mechanics/Progress Quest.svg'>
           <figcaption><strong>Progress Quest:</strong> Time is exchanged for progress, no effort on behalf of the player required. If a repetitive task can be optimized, it should be, right?</figcaption>
         </figure>
         <p>
@@ -38,8 +38,8 @@
           A rather more interesting example is <a href="http://www.openttd.org">Open Transport Tycoon Deluxe</a><a class='lp' href="http://youtu.be/ic-lzaJigDk?t=10m"></a>. As with many games, you are limited in your actions by your budget. You can actually earn enough money that it becomes a non-issue, however, at which point you are limited simply by the amount of time you can actually put in to building new routes. (Side note: This presents a curious inversion to Zynga games such as <a href="http://company.zynga.com/games/farmville">Farmville</a><a class='lp' href="http://www.youtube.com/watch?v=poq5RSNmYnM"></a>, which progress slower as you progress. OpenTTD <strong>accelerates</strong> the pace as the game goes on.) The chart below describes one facet of the game, the routes you have your vehicles haul goods over to make money.
         </p>
         <figure>
-          <img alt='A complex graph of relationships in OpenTTD.' src='Blog Posts/02/OpenTTD.svg'>
-          <img src='Blog Posts/02/Key.svg'>
+          <img alt='A complex graph of relationships in OpenTTD.' src='Blog Posts/02.Flowcharts of Game Mechanics/OpenTTD.svg'>
+          <img src='Blog Posts/02.Flowcharts of Game Mechanics/Key.svg'>
           <figcaption><strong>OpenTTD:</strong> An unsubtle graph, containing the loudest relationships.</figcaption>
         </figure>
         <p>
@@ -66,20 +66,20 @@
           I found an interesting game a few days ago. It is very well designed, and can be played at <a href="http://adarkroom.doublespeakgames.com/">Doublespeak Games</a>' site. The game takes a fairly extreme approach the graph of interactions. It starts with one. You move up from there. (This is the polar opposite of <a href="http://www.bay12games.com/dwarves/">Dwarf Fortress</a><a class='lp' href="http://www.youtube.com/watch?v=kQUihAU6GHE"></a>.) A Dark Room is ridiculously easy to learn, and it stays fresh throughout the game as the number of interactions expands.
         </p>
         <figure>
-          <img alt='A simple graph of relationships in A Dark Room.' src='Blog Posts/02/A Dark Room 1.svg'>
+          <img alt='A simple graph of relationships in A Dark Room.' src='Blog Posts/02.Flowcharts of Game Mechanics/A Dark Room 1.svg'>
           <figcaption><strong>Stage 1</strong></figcaption>
         </figure>
         <figure>
-          <img alt='A less simple graph.' src='Blog Posts/02/A Dark Room 2.svg'>
+          <img alt='A less simple graph.' src='Blog Posts/02.Flowcharts of Game Mechanics/A Dark Room 2.svg'>
           <figcaption><strong>Stage 2</strong></figcaption>
         </figure>
         <figure>
-          <img alt='An even less simple graph.' src='Blog Posts/02/A Dark Room 3.svg'>
+          <img alt='An even less simple graph.' src='Blog Posts/02.Flowcharts of Game Mechanics/A Dark Room 3.svg'>
           <figcaption><strong>Stage 3</strong></figcaption>
         </figure>
         <figure>
-          <img alt='And so on.' src='Blog Posts/02/A Dark Room 4.svg'>
-          <!-- %img{:src => "Blog Posts/02/Key.svg"} /Don't need this here 'cause it's been said already. -->
+          <img alt='And so on.' src='Blog Posts/02.Flowcharts of Game Mechanics/A Dark Room 4.svg'>
+          <!-- %img{:src => "Blog Posts/02.Flowcharts of Game Mechanics/Key.svg"} /Don't need this here 'cause it's been said already. -->
           <figcaption><strong>Stage 4</strong></figcaption>
         </figure>
         <p>
